logs/zif.sedna.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zif'...
Listing './lib/python3.5/site-packages/zif/sedna'...
Compiling './lib/python3.5/site-packages/zif/sedna/dbapitest.py'...
***   File "./lib/python3.5/site-packages/zif/sedna/dbapitest.py", line 16
    print name,value
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zif/sedna/example'...
Compiling './lib/python3.5/site-packages/zif/sedna/example/ot.py'...
***   File "./lib/python3.5/site-packages/zif/sedna/example/ot.py", line 30
    print begat_verses.time
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zif/sedna/msgcodes.py'...
***   File "./lib/python3.5/site-packages/zif/sedna/msgcodes.py", line 76
    print codes
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zif/sedna/pool.py'...
***   File "./lib/python3.5/site-packages/zif/sedna/pool.py", line 276
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zif/sedna/protocol.py'...
***   File "./lib/python3.5/site-packages/zif/sedna/protocol.py", line 647
    except socket.error,e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zif/sedna/sednaobject.py'...
***   File "./lib/python3.5/site-packages/zif/sedna/sednaobject.py", line 380
    if step <> 1:
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zif.sedna-0.10a2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
